[package]
name = "supertini"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
log = "0.4.0"
env_logger = "0.9.0"
notify = "4.0.17"
tokio = { version = "1.17.0", features = ["macros","rt-multi-thread","signal","sync"]}
futures = "0.3.21"
clap = { version = "3.1.6"}
