[package]
name = "supertini"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.0"
env_logger = "0.10.1"
tokio = { version = "1.17.0", features = ["macros","rt-multi-thread","signal","sync", "time", "process"]}
futures = "0.3.21"
clap = { version = "4.4.8"}
